# emulator-manager

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: config.py  context.py  logger.py  utils.py
app/core/: backup.py  game_icon.py  path_resolver.py  rename_engine.py  restore.py  rom_manager.py  scanner.py  scraper.py  sync.py
app/data/: rom_library.py  scrape_cache.py
app/i18n/: __init__.py  en_US.json  ja_JP.json  zh_CN.json
app/models/: backup_record.py  emulator.py  game_save.py  rom_entry.py  scrape_result.py
app/plugins/: base.py  plugin_manager.py
app/plugins/citra/: plugin.py
app/plugins/gba/: games.json  parsers.py  plugin.py
app/plugins/mesen/: plugin.py
app/plugins/mgba/: plugin.py
app/plugins/n3ds/: games.json  parsers.py  plugin.py
app/plugins/nds/: games.json  parsers.py  plugin.py
app/plugins/nes/: games.json  header.json  parsers.py  plugin.py
app/plugins/pcsx2/: plugin.py
app/plugins/ryujinx/: plugin.py
app/plugins/snes/: games.json  header.json  parsers.py  plugin.py
app/plugins/snes9x/: plugin.py
app/plugins/switch/: parsers.py  plugin.py
app/plugins/yuzu/: plugin.py
app/scrapers/: base.py  igdb.py  screenscraper.py
app/ui/: constants.py  main_window.py  theme.py  utils.py
app/ui/components/: flow_layout.py  game_card.py  type_badge.py
app/ui/dialogs/: rom_detail_dialog.py
app/ui/pages/: rom_management_page.py  (+2 more)
tests/: test_backup.py  test_config.py  test_path_resolver.py  test_rename_engine.py  test_rom_library.py  test_version_extract.py
tools/: add_custom_rom.py  import_dat.py
(+8 files in other folders)
