[project]
name = "emulator-manager"
version = "0.1.0"
description = "Emulator ROM scraping, save backup, and ROM management tool"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "leafvmaple" }]

dependencies = [
    "PySide6>=6.7",
    "PySide6-Fluent-Widgets>=1.7",
    "httpx>=0.27",
    "loguru>=0.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
